--- a/.env
+++ b/.env
@@ -30,11 +30,11 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
-# database.default.hostname = localhost
-# database.default.database = crud
-# database.default.username = root
-# database.default.password = root
-# database.default.DBDriver = MySQLi
+database.default.hostname = localhost
+database.default.database = crud
+database.default.username = root
+database.default.password = ''
+database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 # database.default.port = 3306
 
